add container widget in sidebar

--- a/Mapas_Emocionais_Streamlit.ipynb
+++ b/Mapas_Emocionais_Streamlit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Mapas_Emocionais_Streamlit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxYUptxcrzX/y1VE98etQR",
+      "authorship_tag": "ABX9TyO403+3nQpaIClsxlomg+zb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aE3friz6Mdyl",
-        "outputId": "bfa92a08-0746-483c-c441-5ba069880140"
+        "outputId": "f0eefcbf-6278-4044-dede-94330c0ab089"
       },
       "source": [
         "# Preparando o ambiente no Google Drive:\n",
@@ -66,6 +66,8 @@
       "source": [
         "# Instalando as bibliotecas necessárias\n",
         "!pip install streamlit\n",
+        "!pip install ipykernel>=5.1.2\n",
+        "!pip install pydeck\n",
         "!pip install pyngrok\n",
         "!pip install streamlit-folium\n",
         "!pip install psycopg2-binary"
@@ -80,7 +82,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cba5e65f-02b7-4e84-eaca-c479b62f561f"
+        "outputId": "965bc78f-749c-43c7-d6f6-bd3fc6006c0e"
       },
       "source": [
         "# Importando bibliotecas para conexão com o banco de dados\n",
@@ -124,7 +126,7 @@
         "  print(error)\n",
         "  print ('Erro na conexao com o banco de dados')\n"
       ],
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,21 +145,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aa9f813-4cda-4f68-e768-8072d2f0078a"
+        "outputId": "537db5ce-2741-471a-b70d-1a1d82fdf076"
       },
       "source": [
-        "# Função que chama todos os nomes dos modais\n",
-        "def lista_vlc():\n",
-        "  lista_vlc = []\n",
-        "  cursor.execute(\"\"\"SELECT DISTINCT ON (valencia) valencia FROM emoji_emoc;\"\"\")\n",
-        "  fet_list = cursor.fetchall()\n",
-        "  conn.commit()\n",
-        "  lista_vlc.append('Todas')\n",
-        "  for valencia in fet_list:\n",
-        "    lista_vlc.append(valencia[0])\n",
-        "  return lista_vlc\n",
+        "num = 1\n",
+        "cursor.execute(\"\"\"SELECT cod_emoji_%s FROM teste;\"\"\" %num)\n",
+        "resposta = cursor.fetchall()\n",
+        "conn.commit()\n",
+        "print(resposta[0][0])\n",
         "\n",
-        "print(lista_vlc()[0])"
+        "# cursor.close()\n",
+        "# conn.close()\n",
+        "\n",
+        "# Função que chama todos os nomes dos modais\n",
+        "# def lista_vlc():\n",
+        "#   lista_vlc = []\n",
+        "#   cursor.execute(\"\"\"SELECT DISTINCT ON (valencia) valencia FROM emoji_emoc;\"\"\")\n",
+        "#   fet_list = cursor.fetchall()\n",
+        "#   conn.commit()\n",
+        "#   lista_vlc.append('Todas')\n",
+        "#   for valencia in fet_list:\n",
+        "#     lista_vlc.append(valencia[0])\n",
+        "#   return lista_vlc\n",
+        "\n",
+        "# print(lista_vlc()[0])"
       ],
       "execution_count": null,
       "outputs": [
@@ -165,7 +176,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Todas\n"
+            "1\n"
           ]
         }
       ]
@@ -196,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z1Pwybzn1wm2",
-        "outputId": "a71757d0-000d-4617-8907-63989ce38900"
+        "outputId": "5ba11457-b545-4934-ce7a-43680cee1bfc"
       },
       "source": [
         "%%writefile app.py\n",
@@ -653,52 +664,56 @@
         "\t# --- CANVA --- #\n",
         "\tst.title(\"Mapas Emocionais\")\n",
         "\t# st.subheader(\"Baseado num caderno do Colab\")\n",
-        " \n",
-        "  # --- SIDEBAR --- #\n",
-        "\tst.sidebar.subheader(\"Consulta Pontuais\")  \n",
-        "\temoc_indiv = st.sidebar.selectbox('Escolha uma emoção', lista_emoc())\n",
-        "\temoc_mdl = st.sidebar.selectbox('Escolha um meio de transporte', lista_mdl())\n",
-        "\temoc_cnr = st.sidebar.selectbox('Escolha um cenário', lista_cnr())\n",
-        "\tst.sidebar.subheader(\"Consulta Pontuais de acordo com o perfil do usuário\")\n",
-        "\temoc_etr = st.sidebar.selectbox('Escolha uma faixa etária', lista_etr())\n",
-        "\temoc_gnr = st.sidebar.selectbox('Escolha um gênero', lista_gnr()) \n",
         "\temoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
-        "\n",
-        "  # Executa a ação no selectbox emoção \n",
-        "\tif emoc_indiv != '' :\n",
-        "\t\tfunc_emoc_indiv(emoc_indiv)\n",
-        "\telse: \n",
-        "\t\tpass\n",
         "  \n",
-        "  # Executa a ação no selectbox modal \n",
-        "\tif emoc_mdl != '':\n",
-        "\t\tfunc_emoc_mdl(emoc_mdl, emoc_vlc)\n",
-        "\telse:\n",
-        "\t\tpass\n",
+        "\t# --- SIDEBAR --- #\n",
+        "\twith st.sidebar.expander(\"Consultas por Ponto\"):\n",
+        "\t\temoc_indiv = st.selectbox('Escolha uma emoção', lista_emoc())\n",
+        "\t\temoc_mdl = st.selectbox('Escolha um meio de transporte', lista_mdl())\n",
+        "\t\temoc_cnr = st.selectbox('Escolha um cenário', lista_cnr())\n",
+        "\t\tst.caption(\"Filtros de acordo com o perfil do usuário\")\n",
+        "\t\temoc_etr = st.selectbox('Escolha uma faixa etária', lista_etr())\n",
+        "\t\temoc_gnr = st.selectbox('Escolha um gênero', lista_gnr()) \n",
+        "\t\t\n",
         "\n",
-        "  # Executa a ação no selectbox cenarios\n",
-        "\tif emoc_cnr != '':\n",
-        "\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
-        "\t\tfunc_emoc_cnr(emoc_cnr, emoc_vlc)\n",
-        "\t\tfunc_pts_cnr(emoc_cnr)\n",
-        "\telse:\n",
-        "\t\tpass\n",
-        "\n",
-        "  # Executa a ação no selectbox faixa etaria\n",
-        "\tif emoc_etr != '':\n",
-        "\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
-        "\t\tfunc_emoc_etr(emoc_etr, emoc_vlc)\n",
-        "\telse:\n",
-        "\t\tpass\n",
-        "\n",
-        "  # Executa a ação no selectbox genero\n",
-        "\tif emoc_gnr != '':\n",
-        "\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
-        "\t\t# Executa a função com a consulta espacial passando os dois parâmetros\n",
-        "\t\tfunc_emoc_gnr(emoc_gnr, emoc_vlc)\n",
-        "\telse:\n",
-        "\t\tpass\n",
+        "  \t# Executa a ação no selectbox emoção \n",
+        "\t\tif emoc_indiv != '' :\n",
+        "\t\t\tfunc_emoc_indiv(emoc_indiv)\n",
+        "\t\telse: \n",
+        "\t\t\tpass\n",
         "  \n",
+        " \t\t# Executa a ação no selectbox modal \n",
+        "\t\tif emoc_mdl != '':\n",
+        "\t\t\tfunc_emoc_mdl(emoc_mdl, emoc_vlc)\n",
+        "\t\telse:\n",
+        "\t\t\tpass\n",
+        "\n",
+        "  \t# Executa a ação no selectbox cenarios\n",
+        "\t\tif emoc_cnr != '':\n",
+        "\t\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
+        "\t\t\tfunc_emoc_cnr(emoc_cnr, emoc_vlc)\n",
+        "\t\t\tfunc_pts_cnr(emoc_cnr)\n",
+        "\t\telse:\n",
+        "\t\t\tpass\n",
+        "\n",
+        "  \t# Executa a ação no selectbox faixa etaria\n",
+        "\t\tif emoc_etr != '':\n",
+        "\t\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
+        "\t\t\tfunc_emoc_etr(emoc_etr, emoc_vlc)\n",
+        "\t\telse:\n",
+        "\t\t\tpass\n",
+        "\n",
+        "  \t# Executa a ação no selectbox genero\n",
+        "\t\tif emoc_gnr != '':\n",
+        "\t\t\t# emoc_vlc = st.multiselect('Escolha as valências da emoções consultadas', lista_vlc(), default=lista_vlc())\n",
+        "\t\t\t# Executa a função com a consulta espacial passando os dois parâmetros\n",
+        "\t\t\tfunc_emoc_gnr(emoc_gnr, emoc_vlc)\n",
+        "\t\telse:\n",
+        "\t\t\tpass\n",
+        "  \n",
+        "\twith st.sidebar.expander(\"Consultas por Linha\"):\n",
+        "\t\tst.write('Algum widget')\n",
+        "\n",
         "  # --- MAPA DO CANVA --- #\n",
         "\tfolium.LayerControl(collapsed = False,).add_to(m)\n",
         "\tfolium_static(m)\n",
@@ -710,7 +725,7 @@
         "cursor.close()\n",
         "conn.close()"
       ],
-      "execution_count": 280,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,18 +743,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2bb27ee1-a334-4edf-875f-e9ead9669567"
+        "outputId": "4bb26eff-42a5-416d-cda2-5bf5aa405582"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "app.py\tdrive  sample_data\n"
+            "'=5.1.2'   app.py   drive   sample_data\n"
           ]
         }
       ]
@@ -752,7 +767,7 @@
       "source": [
         "  !streamlit run --server.port 80 app.py &>/dev/null&"
       ],
-      "execution_count": 282,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +777,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16f30098-b620-41b1-f960-3a1161a2270d"
+        "outputId": "279bb43e-6338-4daa-9337-1a64e8013ab8"
       },
       "source": [
         "from pyngrok import ngrok\n",
@@ -771,7 +786,7 @@
         "public_url = ngrok.connect(port='8501')\n",
         "public_url"
       ],
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,40 +800,47 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2021-10-10 21:25:08.665 Opening tunnel named: http-80-1ec09e6b-2506-41c5-9b3b-ecdaac9c703b\n",
-            "2021-10-10 21:25:08.700 t=2021-10-10T21:25:08+0000 lvl=info msg=\"no configuration paths supplied\"\n",
-            "2021-10-10 21:25:08.703 t=2021-10-10T21:25:08+0000 lvl=info msg=\"using configuration at default config path\" path=/root/.ngrok2/ngrok.yml\n",
-            "2021-10-10 21:25:08.705 t=2021-10-10T21:25:08+0000 lvl=info msg=\"open config file\" path=/root/.ngrok2/ngrok.yml err=nil\n",
-            "2021-10-10 21:25:08.714 t=2021-10-10T21:25:08+0000 lvl=info msg=\"starting web service\" obj=web addr=127.0.0.1:4040\n",
-            "2021-10-10 21:25:08.911 t=2021-10-10T21:25:08+0000 lvl=info msg=\"tunnel session started\" obj=tunnels.session\n",
-            "2021-10-10 21:25:08.913 t=2021-10-10T21:25:08+0000 lvl=info msg=\"client session established\" obj=csess id=0dcf5add5efa\n",
-            "2021-10-10 21:25:08.921 t=2021-10-10T21:25:08+0000 lvl=info msg=start pg=/api/tunnels id=11be76b4206c7abe\n",
-            "2021-10-10 21:25:08.923 t=2021-10-10T21:25:08+0000 lvl=info msg=end pg=/api/tunnels id=11be76b4206c7abe status=200 dur=599.68µs\n",
-            "2021-10-10 21:25:08.925 t=2021-10-10T21:25:08+0000 lvl=info msg=start pg=/api/tunnels id=d2515990f35a0267\n",
-            "2021-10-10 21:25:08.927 t=2021-10-10T21:25:08+0000 lvl=info msg=end pg=/api/tunnels id=d2515990f35a0267 status=200 dur=179.763µs\n",
-            "2021-10-10 21:25:08.928 t=2021-10-10T21:25:08+0000 lvl=info msg=start pg=/api/tunnels id=88f7b38c29a8f7a8\n",
-            "2021-10-10 21:25:09.001 t=2021-10-10T21:25:09+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=\"http-80-1ec09e6b-2506-41c5-9b3b-ecdaac9c703b (http)\" addr=http://localhost:80 url=http://77d3-34-73-237-172.ngrok.io\n",
-            "2021-10-10 21:25:09.005 t=2021-10-10T21:25:09+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=http-80-1ec09e6b-2506-41c5-9b3b-ecdaac9c703b addr=http://localhost:80 url=https://77d3-34-73-237-172.ngrok.io\n",
-            "2021-10-10 21:25:09.010 t=2021-10-10T21:25:09+0000 lvl=info msg=end pg=/api/tunnels id=88f7b38c29a8f7a8 status=201 dur=80.547169ms\n",
-            "2021-10-10 21:25:09.013 t=2021-10-10T21:25:09+0000 lvl=info msg=start pg=\"/api/tunnels/http-80-1ec09e6b-2506-41c5-9b3b-ecdaac9c703b (http)\" id=beb2b4a8d0cc88af\n"
+            "2021-10-13 00:06:49.631 INFO    pyngrok.ngrok: Opening tunnel named: http-80-03712821-f16b-431d-b4dc-ce28832e77f2\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ""
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "2021-10-13 00:06:55.441 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"no configuration paths supplied\"\n",
+            "2021-10-13 00:06:55.443 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"using configuration at default config path\" path=/root/.ngrok2/ngrok.yml\n",
+            "2021-10-13 00:06:55.444 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"open config file\" path=/root/.ngrok2/ngrok.yml err=nil\n",
+            "2021-10-13 00:06:55.457 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"starting web service\" obj=web addr=127.0.0.1:4040\n",
+            "2021-10-13 00:06:55.693 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"tunnel session started\" obj=tunnels.session\n",
+            "2021-10-13 00:06:55.695 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"client session established\" obj=csess id=71c09e042f4d\n",
+            "2021-10-13 00:06:55.703 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=48a3aefd4357512a\n",
+            "2021-10-13 00:06:55.705 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=48a3aefd4357512a status=200 dur=561.43µs\n",
+            "2021-10-13 00:06:55.707 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=7168b5cee793788d\n",
+            "2021-10-13 00:06:55.711 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=7168b5cee793788d status=200 dur=134.204µs\n",
+            "2021-10-13 00:06:55.715 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=b8255a7b15d64b0a\n",
+            "2021-10-13 00:06:55.875 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=\"http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" addr=http://localhost:80 url=http://4c6a-35-233-188-33.ngrok.io\n",
+            "2021-10-13 00:06:55.878 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=http-80-03712821-f16b-431d-b4dc-ce28832e77f2 addr=http://localhost:80 url=https://4c6a-35-233-188-33.ngrok.io\n",
+            "2021-10-13 00:06:55.880 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=b8255a7b15d64b0a status=201 dur=161.297309ms\n",
+            "2021-10-13 00:06:55.885 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=\"/api/tunnels/http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" id=7b5c5cfb1f496a89\n",
+            "2021-10-13 00:06:55.887 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=\"/api/tunnels/http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" id=7b5c5cfb1f496a89 status=200 dur=188.7µs\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<NgrokTunnel: \"http://77d3-34-73-237-172.ngrok.io\" -> \"http://localhost:80\">"
+              "<NgrokTunnel: \"http://4c6a-35-233-188-33.ngrok.io\" -> \"http://localhost:80\">"
             ]
           },
           "metadata": {},
-          "execution_count": 273
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "2021-10-10 21:25:09.017 t=2021-10-10T21:25:09+0000 lvl=info msg=end pg=\"/api/tunnels/http-80-1ec09e6b-2506-41c5-9b3b-ecdaac9c703b (http)\" id=beb2b4a8d0cc88af status=200 dur=298.097µs\n"
-          ]
+          "execution_count": 5
         }
       ]
     },
@@ -836,7 +858,7 @@
         "from pyngrok import ngrok\n",
         "ngrok.kill()"
       ],
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
