--- a/Mapas_Emocionais_Streamlit.ipynb
+++ b/Mapas_Emocionais_Streamlit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Mapas_Emocionais_Streamlit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO403+3nQpaIClsxlomg+zb",
+      "authorship_tag": "ABX9TyPbcot4y3xLnEBBluLXY5G3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aE3friz6Mdyl",
-        "outputId": "f0eefcbf-6278-4044-dede-94330c0ab089"
+        "outputId": "707e298f-4c15-4637-a1fb-53113f93fed7"
       },
       "source": [
         "# Preparando o ambiente no Google Drive:\n",
@@ -78,11 +78,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OBsqv-BnCYK8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "965bc78f-749c-43c7-d6f6-bd3fc6006c0e"
+        "id": "OBsqv-BnCYK8"
       },
       "source": [
         "# Importando bibliotecas para conexão com o banco de dados\n",
@@ -127,16 +123,7 @@
         "  print ('Erro na conexao com o banco de dados')\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Connecting to the PostgreSQL database...\n",
-            "Conexao realizada com sucesso\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -207,7 +194,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z1Pwybzn1wm2",
-        "outputId": "5ba11457-b545-4934-ce7a-43680cee1bfc"
+        "outputId": "e8d74b3f-ac08-4ea3-87b9-8c01b74c6570"
       },
       "source": [
         "%%writefile app.py\n",
@@ -324,6 +311,13 @@
         "  for valencia in fet_list:\n",
         "    lista_vlc.append(valencia[0])\n",
         "  return lista_vlc\n",
+        "\n",
+        "# --- ESTILOS --- #\n",
+        "# Função que retorna o estilo das ruas classificada por valência\n",
+        "def style_vlc(feature):\n",
+        "\treturn { 'color': '#bababa' if feature['properties']['vlc_maior_text'] == 'Neutro' \n",
+        "\t        else '#d7191c' if feature['properties']['vlc_maior_text'] == 'Negativo' else '#2c7bb6'\t\t\n",
+        "\t}\n",
         "\n",
         "# --- CONSULTAS NO BANCO --- #\n",
         "# Função que executa as consultas EMOÇÕES PONTO individuais\n",
@@ -655,6 +649,58 @@
         "  else:\n",
         "    st.info('Escolha uma os mais valências para visualizar as emoções filtradas por gênero dos participantes')\n",
         "\n",
+        "# Função que executa a consulta das emoções por LINHA\n",
+        "def func_emoc_lns(emoc_vlc):\n",
+        "\tif len(emoc_vlc) == 3:\n",
+        "\t\tcursor.execute(\"\"\"CREATE OR REPLACE VIEW emoc_vlc AS SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s'\n",
+        "\t\tUNION SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s' UNION SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s'\"\"\" %(emoc_vlc[0], emoc_vlc[1], emoc_vlc[2]))\n",
+        "\t\tcursor.execute(\"\"\"SELECT row_to_json(fc) FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features \n",
+        "\t\tFROM (SELECT 'Feature' As type, ST_AsGeoJSON(lg.geom)::json As geometry, row_to_json((SELECT l FROM (SELECT fid, vlc_maior, vlc_maior_text) As l)) As properties \n",
+        "\t\tFROM emoc_vlc As lg ) As f )  As fc;\"\"\")\n",
+        "\t\tjson_emoc_lns = json.dumps(cursor.fetchall())\n",
+        "\t\tconn.commit()\n",
+        "\t\t# st.json(json_emoc_lns)\n",
+        "\t\n",
+        "\t\tlayer = folium.GeoJson(\n",
+        "\t\t\t\tjson_emoc_lns[2:len(json_emoc_lns)-2],\n",
+        "\t\t\t\tname = 'Ruas classificadas por todas as valência',\n",
+        "\t\t\t\tstyle_function = lambda feature: style_vlc(feature)\n",
+        "\t\t).add_to(m)\n",
+        "\telif len(emoc_vlc) == 2:\n",
+        "\t\tcursor.execute(\"\"\"CREATE OR REPLACE VIEW emoc_vlc AS SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s'\n",
+        "\t\tUNION SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s'\"\"\" %(emoc_vlc[0], emoc_vlc[1]))\n",
+        "\t\tcursor.execute(\"\"\"SELECT row_to_json(fc) FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features \n",
+        "\t\tFROM (SELECT 'Feature' As type, ST_AsGeoJSON(lg.geom)::json As geometry, row_to_json((SELECT l FROM (SELECT fid, vlc_maior, vlc_maior_text) As l)) As properties \n",
+        "\t\tFROM emoc_vlc As lg ) As f )  As fc;\"\"\")\n",
+        "\t\tjson_emoc_lns = json.dumps(cursor.fetchall())\n",
+        "\t\tconn.commit()\n",
+        "\t\t# st.json(json_emoc_lns)\n",
+        "\t\n",
+        "\t\tlayer = folium.GeoJson(\n",
+        "\t\t\t\tjson_emoc_lns[2:len(json_emoc_lns)-2],\n",
+        "\t\t\t\tname = 'Ruas classificadas pelas valências %s e %s' %(emoc_vlc[0], emoc_vlc[1]),\n",
+        "\t\t\t\tstyle_function = lambda feature: style_vlc(feature)\n",
+        "\t\t).add_to(m)\n",
+        "\telif len(emoc_vlc) == 1:\n",
+        "\t\tcursor.execute(\"\"\"CREATE OR REPLACE VIEW emoc_vlc AS SELECT * FROM emoc_ways_vlc_rua WHERE vlc_maior_text = '%s'\"\"\" %emoc_vlc[0])\n",
+        "\t\tcursor.execute(\"\"\"SELECT row_to_json(fc) FROM ( SELECT 'FeatureCollection' As type, array_to_json(array_agg(f)) As features \n",
+        "\t\tFROM (SELECT 'Feature' As type, ST_AsGeoJSON(lg.geom)::json As geometry, row_to_json((SELECT l FROM (SELECT fid, vlc_maior, vlc_maior_text) As l)) As properties \n",
+        "\t\tFROM emoc_vlc As lg ) As f )  As fc;\"\"\")\n",
+        "\t\tjson_emoc_lns = json.dumps(cursor.fetchall())\n",
+        "\t\tconn.commit()\n",
+        "\t\t# st.json(json_emoc_lns)\n",
+        "\t\n",
+        "\t\tlayer = folium.GeoJson(\n",
+        "\t\t\t\tjson_emoc_lns[2:len(json_emoc_lns)-2],\n",
+        "\t\t\t\tname = 'Ruas classificadas pela valências %s' %emoc_vlc[0],\n",
+        "\t\t\t\tstyle_function = lambda feature: style_vlc(feature)\n",
+        "\t\t).add_to(m)\n",
+        "\telse:\n",
+        "\t\tpass\n",
+        "\n",
+        "# Função que passa para o banco os parâmetros para fazer uma rota\n",
+        "# def func_address_route(address_1, address_2):\n",
+        "\n",
         "# --- PÁGINA --- #\n",
         "# Configurações da aba da página\n",
         "PAGE_CONFIG = {\"page_title\":\"Mapas Emocionais\",\"page_icon\":\":heart:\",\"layout\":\"centered\"}\n",
@@ -710,9 +756,23 @@
         "\t\t\tfunc_emoc_gnr(emoc_gnr, emoc_vlc)\n",
         "\t\telse:\n",
         "\t\t\tpass\n",
-        "  \n",
+        "\n",
+        "\t# if st.sidebar.button('Consultar linhas'):\n",
+        "\t# \tfunc_emoc_lns()\n",
+        "\n",
         "\twith st.sidebar.expander(\"Consultas por Linha\"):\n",
-        "\t\tst.write('Algum widget')\n",
+        "\t\tif st.checkbox('Ruas por valência'):\n",
+        "\t\t\tfunc_emoc_lns(emoc_vlc)\n",
+        "\t\tif st.checkbox('Ponto médio emoções'):\n",
+        "\t\t\tpass\n",
+        "\n",
+        "\twith st.sidebar.expander(\"Fazer uma rota\"):\n",
+        "\t\taddress_1 = st.text_input('Digite um endereço para ser o ponto inicial')\n",
+        "\t\taddress_2 = st.text_input('Digite outro endereço para ser o ponto final')\n",
+        "\t\tbutton_route = st.button('Fazer a rota')\n",
+        "\t\t\t\n",
+        "\tif button_route:\n",
+        "\t\tst.write('Peguei os endereços e farei a rota entre %s e %s' %(address_1, address_2))\n",
         "\n",
         "  # --- MAPA DO CANVA --- #\n",
         "\tfolium.LayerControl(collapsed = False,).add_to(m)\n",
@@ -743,7 +803,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4bb26eff-42a5-416d-cda2-5bf5aa405582"
+        "outputId": "778a0781-45c3-4f69-80e2-b7b4be672cc5"
       },
       "source": [
         "!ls"
@@ -777,7 +837,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "279bb43e-6338-4daa-9337-1a64e8013ab8"
+        "outputId": "7c76964c-eac8-4c31-cc14-9389183cb361"
       },
       "source": [
         "from pyngrok import ngrok\n",
@@ -800,47 +860,40 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2021-10-13 00:06:49.631 INFO    pyngrok.ngrok: Opening tunnel named: http-80-03712821-f16b-431d-b4dc-ce28832e77f2\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            ""
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "2021-10-13 00:06:55.441 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"no configuration paths supplied\"\n",
-            "2021-10-13 00:06:55.443 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"using configuration at default config path\" path=/root/.ngrok2/ngrok.yml\n",
-            "2021-10-13 00:06:55.444 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"open config file\" path=/root/.ngrok2/ngrok.yml err=nil\n",
-            "2021-10-13 00:06:55.457 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"starting web service\" obj=web addr=127.0.0.1:4040\n",
-            "2021-10-13 00:06:55.693 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"tunnel session started\" obj=tunnels.session\n",
-            "2021-10-13 00:06:55.695 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"client session established\" obj=csess id=71c09e042f4d\n",
-            "2021-10-13 00:06:55.703 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=48a3aefd4357512a\n",
-            "2021-10-13 00:06:55.705 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=48a3aefd4357512a status=200 dur=561.43µs\n",
-            "2021-10-13 00:06:55.707 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=7168b5cee793788d\n",
-            "2021-10-13 00:06:55.711 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=7168b5cee793788d status=200 dur=134.204µs\n",
-            "2021-10-13 00:06:55.715 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=/api/tunnels id=b8255a7b15d64b0a\n",
-            "2021-10-13 00:06:55.875 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=\"http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" addr=http://localhost:80 url=http://4c6a-35-233-188-33.ngrok.io\n",
-            "2021-10-13 00:06:55.878 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=http-80-03712821-f16b-431d-b4dc-ce28832e77f2 addr=http://localhost:80 url=https://4c6a-35-233-188-33.ngrok.io\n",
-            "2021-10-13 00:06:55.880 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=/api/tunnels id=b8255a7b15d64b0a status=201 dur=161.297309ms\n",
-            "2021-10-13 00:06:55.885 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=start pg=\"/api/tunnels/http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" id=7b5c5cfb1f496a89\n",
-            "2021-10-13 00:06:55.887 INFO    pyngrok.process.ngrok: t=2021-10-13T00:06:55+0000 lvl=info msg=end pg=\"/api/tunnels/http-80-03712821-f16b-431d-b4dc-ce28832e77f2 (http)\" id=7b5c5cfb1f496a89 status=200 dur=188.7µs\n"
+            "2021-10-13 17:12:23.478 INFO    pyngrok.ngrok: Opening tunnel named: http-80-5b34146c-385b-4fef-a277-2f799ab440f7\n",
+            "2021-10-13 17:12:23.516 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"no configuration paths supplied\"\n",
+            "2021-10-13 17:12:23.522 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"using configuration at default config path\" path=/root/.ngrok2/ngrok.yml\n",
+            "2021-10-13 17:12:23.525 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"open config file\" path=/root/.ngrok2/ngrok.yml err=nil\n",
+            "2021-10-13 17:12:23.527 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"starting web service\" obj=web addr=127.0.0.1:4040\n",
+            "2021-10-13 17:12:23.619 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"tunnel session started\" obj=tunnels.session\n",
+            "2021-10-13 17:12:23.626 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"client session established\" obj=csess id=7c914319a1ae\n",
+            "2021-10-13 17:12:23.650 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=start pg=/api/tunnels id=0f78668c8a504fa5\n",
+            "2021-10-13 17:12:23.658 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=end pg=/api/tunnels id=0f78668c8a504fa5 status=200 dur=8.582204ms\n",
+            "2021-10-13 17:12:23.664 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=start pg=/api/tunnels id=8a75a3ceb63ed7cd\n",
+            "2021-10-13 17:12:23.670 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=end pg=/api/tunnels id=8a75a3ceb63ed7cd status=200 dur=156.43µs\n",
+            "2021-10-13 17:12:23.676 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=start pg=/api/tunnels id=cd73dbe24c4021d6\n",
+            "2021-10-13 17:12:23.712 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=\"http-80-5b34146c-385b-4fef-a277-2f799ab440f7 (http)\" addr=http://localhost:80 url=http://b6d4-35-194-86-149.ngrok.io\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<NgrokTunnel: \"http://4c6a-35-233-188-33.ngrok.io\" -> \"http://localhost:80\">"
+              "<NgrokTunnel: \"http://b6d4-35-194-86-149.ngrok.io\" -> \"http://localhost:80\">"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 86
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "2021-10-13 17:12:23.719 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=\"started tunnel\" obj=tunnels name=http-80-5b34146c-385b-4fef-a277-2f799ab440f7 addr=http://localhost:80 url=https://b6d4-35-194-86-149.ngrok.io\n",
+            "2021-10-13 17:12:23.722 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=end pg=/api/tunnels id=cd73dbe24c4021d6 status=201 dur=56.748952ms\n",
+            "2021-10-13 17:12:23.736 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=start pg=\"/api/tunnels/http-80-5b34146c-385b-4fef-a277-2f799ab440f7 (http)\" id=7abcd1a561691030\n",
+            "2021-10-13 17:12:23.741 INFO    pyngrok.process.ngrok: t=2021-10-13T17:12:23+0000 lvl=info msg=end pg=\"/api/tunnels/http-80-5b34146c-385b-4fef-a277-2f799ab440f7 (http)\" id=7abcd1a561691030 status=200 dur=145.573µs\n"
+          ]
         }
       ]
     },
@@ -851,7 +904,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3aa3fff0-0d3c-4939-88f0-31c6bcf34a82"
+        "outputId": "55f01bc8-75b0-47ee-cd6c-e6974496de7b"
       },
       "source": [
         "# mata o processso do ngork para reiniciar (se necessário)\n",
@@ -864,7 +917,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2021-10-10 21:25:05.757 Killing ngrok process: 3243\n"
+            "2021-10-13 17:12:12.984 INFO    pyngrok.process: Killing ngrok process: 569\n"
           ]
         }
       ]
